frontend done, ready to deploy

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <option value="java">Java</option>
     <option value="javascript">JavaScript</option>
     <option value="python">Python</option>
-    <option value="c++">C++</option>
+    <option value="cpp">C++</option>
     <option value="php">PHP</option>
-    <option value="c-sharp">C#</option>
+    <option value="ruby">Ruby</option>
+    <option value="go">Go</option>
+    <option value="typescript">TypeScript</option>
+
     <!-- Add more language options here as needed -->
   </select>
   <button onclick="convertCode()">Convert Code</button>
